--- a/apache.yml
+++ b/apache.yml
@@ -3,7 +3,7 @@ services:
   apache:
     image: httpd:latest
     container_name: my-apache-app
-    restart: on-failure
+    restart: no
     ports:
     - '8082:80'
     volumes:
